completed rough draft (untested) of live loop

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-	"python.pythonPath": "C:\\Users\\DIsler\\.virtualenvs\\v2-bvkQHhc-\\scripts\\python.exe"
+	"python.pythonPath": "C:\\Users\\DIsler\\.virtualenvs\\1000-GL5r66pn\\Scripts\\python.exe",
+	"python.linting.pylintEnabled": false
 }
